# TruthGuard

./: .gitignore  ArticleFinder.py  BagOfWords.py  README.md  app.py  article.py  article_finder.py  bag_of_words.py  collect_websites.ipynb  data_collection.ipynb  data_model.py  data_preprocessing.ipynb  decision_trees.ipynb  feature_engineering.ipynb  gaussian_nb.ipynb  idea.txt  ideas.txt  logistic_regression.ipynb  main.ipynb  main.py  model_training.ipynb  preprocessing.ipynb  pyproject.toml  related-articles_conspiracy.json  related-articles_pro-science.json  requirements.txt  tasks.md  test.json  test.py  test.txt  test_2.py  test_run.ipynb  test_run.py  text_processor.py
API/: api.py  app.py  model.pkl  test.py
Data/: conspiracy.json  science.json
Extension/: manifest.json  popup.html  script.js  styles.css
ML Model Training/: bagOfWords.py  model_initialization.ipynb  models.ipynb  spacy_test.py
ML Pipeline/: article_finder.py  bag_of_words.py  data_acquisition.ipynb  data_processing.ipynb  model_initialization.ipynb  model_training.ipynb
Pipeline/: bagOfWords.py  bag_of_words.py  bag_of_words_orig.py  bag_of_words_rev.py  data_acquisition.ipynb  data_processing.ipynb  demonstration.ipynb  model_initialization.ipynb  model_training.ipynb  rev_models.ipynb
Scraping/: article_finder.py  data_acquisition.ipynb  data_processing.ipynb  preprocessing.ipynb  test.ipynb  test.json
Website/: app.py  website.py
components/: ArticleFinder.py  BagOfWords.py
cord19/: article-100.json  article-101.json  article-102.json  article-103.json  article-104.json  (+118 more)
(+548 files in other folders)
