[tool.poetry]
name = "covid19-classifier"
version = "0.1.0"
description = ""
authors = ["Krish Shah <shahkrish2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.4"
newspaper3k = "^0.2.8"
imblearn = "^0.0"
gensim = "^4.3.2"
spacy = "^3.7.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
